Fixed utility bar icon spacing on portrait mode

--- a/keijupeli/src/layout/UtilityBar.css
+++ b/keijupeli/src/layout/UtilityBar.css
@@ -27,5 +27,7 @@
     }
     .AppIcon {
         text-align: center;
+        margin-bottom: 0;
+        margin-right: 10px;
     }
 }
